--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint-plugin-react": "^6.10.3",
     "file-loader": "^0.9.0",
     "http-proxy-middleware": "^0.17.4",
+    "prop-types": "^15.5.7",
     "react-hot-loader": "^1.3.1",
     "react-router": "^3.0.2",
     "underscore": "^1.8.3",
